kubernetes-12/1.5/src/frontend.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels: 
    app: apps
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 3
  template:
    metadata:
      labels:
        app: frontend
        component: fullApp
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
