kubernetes-12/1.5/src/app.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: netology-service
  labels:
    app: netology-service
spec:
  selector:
    component: fullApp
  ports: 
    - name: frontend
      protocol: TCP
      port: 9001
      targetPort: 80
    - name: backend
      protocol: TCP
      port: 9002
      targetPort: 1180
