kubernetes-12/1.5/src/apps.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: netology-service
            port:
              number: 9001
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: netology-service
            port:
              number: 9002
